Another shot in fixing menu appearing small on ios sometimes

--- a/assets/stylesheets/layout/_header.scss
+++ b/assets/stylesheets/layout/_header.scss
@@ -82,6 +82,7 @@ $duration: 0.5s;
 
 		background-image: image('mobile-menu-button.svg');
 		background-position: 50% 50%;
+		background-size: 100%;
 
 		content: '';
 	}
